Remove DumpWithoutCrashing() from media/cast/net/pacing

DumpWithoutCrashing() was added 2.5y ago
(https://codereview.chromium.org/539323002), is it still valuable? If
not I'd like to remove it as part of trying to rationalize all calls to
this function, as it has a possibility of hiding other legitimate
crashes due to throttling.

R=miu@chromium.org
BUG=694688

Review-Url: https://codereview.chromium.org/2705193005
Cr-Commit-Position: refs/heads/master@{#452958}

Former-commit-id: 66d596c38956e2ef0e4575e978c29283c6753c86